--- a/PFlexbox/css/flexboxclase.css
+++ b/PFlexbox/css/flexboxclase.css
@@ -1,5 +1,11 @@
+body{
+    display: flex;
+    justify-content: center;
+    
+}
 .card{
-    border: solid;
+    box-shadow: 5px 5px 18px rgba(0, 0, 0, 0.2);
+    border: solid 1px;
     width: 350px;
     display: flex;
     flex-direction: column;
